Feat : gitignore application.properties 추가

--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,9 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/java,gradle,windows,intellij
+
+### VS Code ###
+.vscode/
+
+## .properties files ##
+src/main/**/application.properties
